add new problem-week1

--- a/week1/oj-client/src/app/components/problem-list/problem-list.component.html
+++ b/week1/oj-client/src/app/components/problem-list/problem-list.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="list-group">
-    <a class="list-group-item" *ngFor="let problem of problems">
+    <a class="list-group-item" *ngFor="let problem of problems" 
+    [routerLink]="['/problems',problem.id]">
       <span class="{{'pull-left label difficulty diff-'+problem.difficulty.toLocaleLowerCase()}}">
           {{problem.difficulty}}
       </span>
@@ -8,5 +9,11 @@
     </a>
 
   </div>
+  <div class="container">
+      <app-new-problem>
+        
+      </app-new-problem>
+    
+    </div>
 
 </div>
