--- a/week1/oj-client/src/app/components/nav-bar/nav-bar.component.html
+++ b/week1/oj-client/src/app/components/nav-bar/nav-bar.component.html
@@ -16,16 +16,16 @@
           </div>
         </form>
         <ul class="nav navbar-nav navbar-right">
-            <li><a [routerLink]="['/problems/bookmark']">Bookmark</a></li>
+            <li><a [routerLink]="['/bookmark']">Bookmark</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><a [routerLink]="['/problems/profile']">My Profile</a></li>
-              <li><a [routerLink]="['/problems/grade']">Grade: Level 1</a></li>
+              <li><a [routerLink]="['/profile']">My Profile</a></li>
+              <li><a [routerLink]="['/grade']">Grade: Level 1</a></li>
               <li role="separator" class="divider"></li>
-              <li><a [routerLink]="['/problems/logout']">Log Out</a></li>
+              <li><a [routerLink]="['/logout']">Log Out</a></li>
             </ul>
           </li>
         </ul>
