--- a/week2/oj-client/src/app/components/editor/editor.component.css
+++ b/week2/oj-client/src/app/components/editor/editor.component.css
@@ -2,5 +2,15 @@
     #editor{
         height:600px;
         width:100%;
+       
+    }
+    #header-content{
+        display:flex;
+        flex-direction: row;
+        margin: 10px 0 10px 0;
+    }
+    #header-content select{
+        width: 70px;
+
     }
 }
