--- a/week2/oj-client/src/app/components/editor/editor.component.html
+++ b/week2/oj-client/src/app/components/editor/editor.component.html
@@ -1,12 +1,13 @@
 <section>
+  <app-display-editors></app-display-editors>
     <header class="editor-header">
       <div class="row">
-        <div class="row">
-            <select class="form-control pull-left lang-select" name="language"
+        <div id="header-content">
+            <select class="form-control pull-left lang-select" name="language" 
             [(ngModel)]="language" (change)="setLanguage(language)">
-            <option *ngFor="let language of languages" [value]="language">
-              {{language}}
-            </option>
+              <option *ngFor="let language of languages" [value]="language">
+                {{language}}
+              </option>
             </select>
             <!--reset button -->
             <!-- Button trigger modal -->
@@ -47,5 +48,5 @@
         <button type="button" class="btn btn-success pull-right" 
         (click)="submit()">Submit Solution</button>
     </footer>
-  </section>
+</section>
 
